@@ -75,6 +75,8 @@ int debug_action           (GPParams *, const char *debug_logfile_name);
 int list_config_action     (GPParams *);
 int get_config_action      (GPParams *, const char *name);
 int set_config_action      (GPParams *, const char *name, const char *value);
+int set_config_index_action      (GPParams *, const char *name, const char *value);
+int set_config_value_action      (GPParams *, const char *name, const char *value);
 int print_storage_info     (GPParams *);
 
 void _get_portinfo_list	(GPParams *p);
